[package]
name = "LucarioProject"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4"
wgpu = "22.1.0"
uvth = "4.0.1"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
bytemuck = { version = "1.18.0", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
instant = "0.1.13"

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]


[lib]
path = "./src/main.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
